--- a/index.css
+++ b/index.css
@@ -1,41 +1,340 @@
-.boxone{
-	width: 200px;
-	height: 200px;
-	margin: 2px 3px 2px 3px;
-	border: 1px solid #00aaee;
-	background: #ff0000;
-	padding: 2px;
+*{
+	margin: 0;
+	box-sizing: border-box;
 }
-.boxtwo{
-	width: 200px;
-	height: 200px;
-	background: #0022aa;
-}
-.float-boxone{
-	width: 50px;
-	height: 50px;
-	margin: 3px;
-	background: #00ff00;
-	float: left;
-}
-.float-boxtwo{
-	width: 50px;
-	height: 50px;
-	margin: 3px;
-	background: #00ff00;
-	float: left;
-}
-.boxthree{
-	width: 200px;
-	height: 200px;
-	background: #ff0000;
+.whole{
+	width: 1024px;
+	margin: 0 auto;
 	position: relative;
 }
-.blue-box{
-	width: 50px;
-	height: 50px;
-	background: #00ff00;
+.top-menu{
+	width: 100%;
+	height: 57px;
 	position: absolute;
-	left: 40px;
-	bottom: 30px;
+	padding: 0 22px;
+	display: flex;
+	z-index: 2000;
+	justify-content: space-between;
+	color: #fff;
+	border-bottom: 1px rgba(250,250,250,0.3) solid;
+
+}
+.menu-center{
+	font-size: 20px;
+	font-weight:545;
+	line-height: 57px;
+	text-align: center;
+	letter-spacing: 1.5px;
+
+}
+.menu-left,.menu-right{
+	width: 150px;
+	height: 100%;
+	line-height: 57px;
+	font-size: 14px;
+	font-weight: 500;
+	text-align: center;
+}
+.menu-left{
+	background: url(left.jpg);
+	background-position: left;
+	background-repeat: no-repeat;
+	background-size: 25px 16px;
+}
+.menu-right{
+	background: url(right.jpg);
+	background-position: right;
+	background-repeat: no-repeat;
+	background-size: 25px 16px;
+}
+.top{
+	width: 100%;
+	height: 100vh;
+	background: #192314;
+	overflow: hidden;
+	position: relative;
+}
+.one-pic{
+	width: 662px;
+	height: 510px;
+	background: url(green-beosound-shape-desktop.jpg);
+	background-size: 662px 510px;
+	float: right;
+}
+.one-text{
+	width: 512px;
+	height: 199px;
+	position: absolute;
+	top: 125px;
+	left: 72px;
+	color: rgb(250,250,250);
+}
+.text-one{
+	height: 24px;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 2px;
+	margin-bottom: 10px;
+}
+.text-two{
+	height: 39px;
+	margin-top: 15px;
+	margin-bottom: 24px;
+	font-size: 30px;
+	font-weight: 500;
+	letter-spacing: 3.75px;
+}
+.text-four{
+	width: 282px;
+	height: 41px;
+	display: block;
+	margin: 8px 0px;
+	background-color: rgba(250,250,250,0.1);
+	font-size: 12px;
+	font-style: normal;
+	font-weight: 400;
+	color: rgb(250,250,250);
+	padding: 10px 40px;
+	/*取消下滑线*/
+	text-decoration: none;
+	/*字间距*/
+	letter-spacing: 1.332px;
+}
+.banner{
+	width: 100%;
+	height: 405px;
+	background: url(img-bg-1350.jpg);
+	background-size: 1024px;
+}
+.pro-box{
+	width: 706px;
+	height: 353px;
+	position: relative;
+	z-index: 100;
+	margin: 0 auto;
+	/*浮动后超出部分隐藏*/
+	overflow: hidden;
+	/*子盒子超出父盒子移动*/
+	transform:translateY(-42px);
+}
+.product{
+	width: 235px;
+	height: 353px;
+	float:left;
+	/*子盒子自由后位置约束，不能跑出父盒子*/
+	position: relative;
+}
+.pro-pic{
+	width: 100%;
+}
+.pro-item{
+	/*子盒子自由*/
+	position: absolute;
+	top: 15px;
+	left: 15px;
+	font-size: 18px;
+	font-weight: 500;
+	color: #fff;
+}
+.two-text{
+	width: 823px;
+	height: 117px;
+	margin: 100px auto 60px;
+}
+.text-top{
+	width: 100%;
+	height: 21px;
+	margin: 12px 0 18px;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 21px;
+	text-align: center;
+	color: rgb(0,0,0);
+	letter-spacing: 1.2px;
+}
+.text-bottom{
+	width: 100%;
+	height: 78px;
+	margin: 15px 0 24px;
+	text-align: center;
+	font-size: 30px;
+	font-weight: 500;
+	letter-spacing: 3.75px;
+}
+.pro-list{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+.list{
+	width: 512px;
+	height: 512px;
+	background: red;
+	position: relative;
+}
+.list:nth-child(1){
+	background: url(beosound-shape-mobile.jpg);
+	background-size: 512px auto;
+}
+.list:nth-child(2){
+	background: url(beovision-eclipse-mobile.jpg);
+	background-size: 512px auto;
+}
+.list:nth-child(3){
+	background: url(beolab-50-mobile.jpg);
+	background-size: 512px auto;
+}
+.list:nth-child(4){
+	background: url(beoplay-p6-categories-mobile-2.jpg);
+	background-size: 512px auto;
+}
+.list:nth-child(5){
+	background: url(beosound-core-mobile.jpg);
+	background-size: 512px auto;
+}
+.list:nth-child(6){
+	background: url(beoplay-h9i-mobile.jpg);
+	background-size: 512px auto;
+}
+.text-item{
+	width: 432px;
+	height: 15px;
+	position: absolute;
+	margin-top: 37px;
+	margin-left: 49px; 
+	font-size: 12px;
+	font-weight: 500;
+	color: #fff;
+	letter-spacing: 2px;
+}
+.three-text{
+	width: 823px;
+	height: 117px;
+	margin: 100px auto 60px;
+}
+.text-t{
+	width: 100%;
+	height: 21px;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 21px;
+	letter-spacing: 1.2px;
+	margin: 12px 0 18px;
+	text-align: center; 
+}
+.text-b{
+	width: 100%;
+	height: 78px;
+	margin: 15px 0 24px;
+	font-size: 30px;
+	font-weight: 500;
+	line-height: 39px;
+	letter-spacing: 3.75px;
+	text-align: center;
+}
+.card{
+	width: 706px;
+	height: 364px;
+	margin: 0 auto;
+	display: flex;
+}
+.card-left{
+	width: 176.4px;
+	height: 324.60px;
+	margin-bottom: 40px;
+}
+.pic-left{
+	width: 100%;
+	height: 168px;
+	background: url(design-as-a-group-effort-01.jpg);
+	background-size: 176.4px 168px;
+}
+.text-left{
+	width: 167.6px;
+	height: 126px;
+	margin-top: 30px;
+	margin-right: 8.8px;
+	color: #000;
+}
+.lt{
+	width: 100%;
+	height: 24px;
+	margin-bottom: 18px;
+	font-size: 12px;
+	font-weight: 300;
+	line-height: 24px;
+}
+.lb{
+	width: 100%;
+	height: 84px;
+	font-weight: 300;
+	font-size: 13px;
+	line-height: 21px;
+}
+.card-center{
+	width: 176.4px;
+	height: 324.6px;
+	margin-bottom: 40px;
+}
+.pic-center{
+	width: 100%;
+	height: 168px;
+	background: url(the-krane.jpg);
+	background-size: 176.4px 168px;
+}
+.text-center{
+	width: 167.6px;
+	height: 105px;
+	margin-top: 30px;
+	margin-right: 8.8px;
+	color: #000;
+}
+.ct{
+	width: 100%;
+	height: 24px;
+	margin-bottom: 18px;
+	font-size: 12px;
+	font-weight: 300;
+	line-height: 24px;
+}
+.cb{
+	width: 100%;
+	height: 63px;
+	font-weight: 300;
+	font-size: 13px;
+	line-height: 21px;
+}
+.card-right{
+	width: 352.8px;
+	height: 324.6px;
+	margin-bottom: 40px;
+}
+.pic-right{
+	width: 100%;
+	height: 168px;
+	background: url(harmonies-story.jpg);
+	background-size: 352.8px 168px;
+}
+.text-right{
+	width: 335px;
+	height: 105px;
+	margin-top: 30px;
+	margin-right:17.6px;
+	color: #000;
+}
+.rt{
+	width: 335px;
+	height: 24px;
+	margin-bottom: 18px;
+	font-size: 12px;
+	font-weight: 300;
+	line-height: 24px;
+}
+.rb{
+	width: 335.2px;
+	height: 63px;
+	font-size: 13px;
+	line-height: 21px;
+	font-weight: 300;
 }
